--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="bottom_button_trans_name">bottom button trans</string>
     <string name="crop">裁剪</string>
     <string name="not_started">你还没有开始哦~</string>
+    <string name="default_time">00:00</string>
+    <string name="default_step">0</string>
 </resources>
